--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,10 @@
 
 body{
     background-color: var(--white);
-    margin: 0;
-    padding: 135px calc(100% - 95%) 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 20px;
-    font-weight: lighter;
+    margin: 0 auto;
+    padding: 100px calc(100% - 90%) 0;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 13px;
 }
 
 /* narbar */
@@ -22,6 +21,7 @@ header{
     top:0;
     left:0;
     width: 100%;
+    height: 50px;
 }
 
 nav{
@@ -29,18 +29,18 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:0 calc(100% - 95%);
+    padding:0 calc(100% - 90%);
 }
 
 .nav-menu{
-    margin-right: calc(100% - 95%);
     display: flex;
     list-style: none;
+    margin-right: -10px;
 }
 
 .nav-item{
-    margin: 20px;
-    line-height: 50px;
+    margin: 15px;
+    line-height: 30px;
 
 }
 
@@ -50,20 +50,19 @@ nav{
 }
 /* cuerpo de la pagina  */
 .contenedor{
-    background-color: aqua;
     width: 100%;
 }
 
 .cont-body{
-    background-color: brown;
+    /* background-color: brown; */
     display: flex;
     width: 100%;
 }
 /* lado izquierdo de la pagina */
 .body-left{
-    width: 60%;
-    margin: 20px;
-    padding: 10px;
+    width: 75%;
+    margin-right: 50px;
+    
 }
 
 .body-left-img{
@@ -73,31 +72,36 @@ nav{
 
 .left-art{
     width: 100%;
+    height: 150px;
     display: flex;
 }
 
 .title{
-    width: 50%;
-    color:var(--color-oscuro);
-    font-size: 40px;
-    font-weight: bold;
+    width: 40%;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    color:var(--color-oscuro);
+    font-size: 25px;
+    font-weight: bold;
+    margin-right: 30px;
 }
 
 
 .note{
-    width: 50%;
+    width: 60%;
+    padding: 10px;
     justify-content: center;
 }
 
 .note p{
     color: var(--color-medio);
-    margin-bottom: 100px;
+    margin-bottom: 40px;
 }
 
 .left-botton{
     width: 250px;
-    height: 60px;
+    height: 30px;
     justify-content: center;
     align-items: center;
     background-color: var(--red);
@@ -113,19 +117,41 @@ nav{
 
 /* Lado derecho de la pagina */
 .body-right{
-    background-color: beige;
-    width: 30%;
-    padding: 15px;
+    background-color: var(--color-oscuro);
+    width: 25%;
+    padding: 10px;
+    overflow: hidden;
+
 }
 
 .title-right{
     color: var(--orange);
     text-transform: uppercase;
+    font-size: 25px;
     font-weight: bold;
+    margin: 20px 0;
 }
 
 .note-right{
-    background-color: var(--color-oscuro);
     color: var(--white);
     width: 100%;
+    height: calc(100% / 4);
+    border-bottom: 1px solid var(--white);
+}
+
+/* el footer del sitio */
+
+.cont-foot{
+    background-color: blue;
+    display: flex;
+}
+
+.item-foot{
+    width: calc(100% / 3);
+    display: flex;
+}
+
+.img-foot{
+    width: 20%;
+    object-fit: contain;
 }
