--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ nav{
 .body-left-img{
     width: 100%;
     height: auto;
+    object-fit: contain;
 }
 
 .left-art{
@@ -119,8 +120,9 @@ nav{
 .body-right{
     background-color: var(--color-oscuro);
     width: 25%;
-    padding: 10px;
+    padding:  0 10px;
     overflow: hidden;
+    box-shadow: 0px 4px 3px rgba(0, 0, 0, .3);
 
 }
 
@@ -130,28 +132,70 @@ nav{
     font-size: 25px;
     font-weight: bold;
     margin: 20px 0;
+    
 }
 
 .note-right{
     color: var(--white);
     width: 100%;
     height: calc(100% / 4);
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+
+}
+
+.body-right div:nth-child(3){
+    border-top: 1px solid var(--white);
     border-bottom: 1px solid var(--white);
+}
+
+.note-right h4{
+    margin-bottom: 3px;
+    font-size: 14px;
+    font-weight: bolder;
+}
+
+.note-right p{
+    margin-top: 3px;
 }
 
 /* el footer del sitio */
 
 .cont-foot{
-    background-color: blue;
+    width: 100%;
+    margin: 10px 0;
     display: flex;
+    justify-content: space-between;
+
 }
 
 .item-foot{
-    width: calc(100% / 3);
+    width: 32%;
     display: flex;
 }
 
+.note-foot{
+    display: inline-block;
+    line-height: 15px;
+}
+
 .img-foot{
-    width: 20%;
+    width: 25%;
     object-fit: contain;
+    margin-right: 10px;
+}
+
+.foot-h2{
+    font-size: 25px;
+    font-weight: bold;
+    color: var(--color-claro);
+}
+
+.foot-h4 {
+    color: var(--color-oscuro);
+}
+
+.foot-p{
+    color: var(--color-claro);
 }
